--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -721,6 +721,41 @@ function getNextUser(task, selectedDate) {
 
 
         // Calculate the current turn for a given date
+        function getTurnForDate(task, selectedDateStr) {
+    const todayStr = new Date().toISOString().split("T")[0];
+    const selectedDate = new Date(selectedDateStr);
+    const userOrder = [...task.users];
+    const completions = task.completions || {};
+    const turnByDate = task.turnByDate || {};
+
+    if (turnByDate[selectedDateStr]) {
+        return turnByDate[selectedDateStr];
+    }
+
+    let currentIndex = userOrder.indexOf(task.turn || userOrder[0]);
+    if (currentIndex === -1) currentIndex = 0;
+
+    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+
+    const startDate = new Date(task.date.split(" to ")[0]);
+    const d = new Date(startDate);
+
+    while (d <= selectedDate) {
+        const dStr = d.toISOString().split("T")[0];
+        if (turnByDate[dStr]) {
+            currentIndex = userOrder.indexOf(turnByDate[dStr]);
+        } else {
+            const completedUsers = Array.isArray(completions[dStr]) ? completions[dStr] : [];
+            const advanceCount = Math.min(completedUsers.length, repeatLimit);
+            currentIndex = (currentIndex + advanceCount) % userOrder.length;
+        }
+        d.setDate(d.getDate() + 1);
+    }
+
+    return userOrder[currentIndex];
+}
 
 
 
