--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -587,12 +587,14 @@ body {
         if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
         if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-        const currentTurn = getTurnForDate(task, selectedDate);
         const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-        const completedCount = completedUsers.length;
-        const isCompleted = completedCount >= repeatLimit;
+const completedCount = completedUsers.length;
+const userOrder = [...task.users];
 
-        const nextUser = getNextUser(task, selectedDate);
+const currentTurn = userOrder[completedCount % userOrder.length];
+const nextUser = userOrder[(completedCount + 1) % userOrder.length];
+const isCompleted = completedCount >= repeatLimit;
+
 
         taskDiv.innerHTML = `
             <strong>${task.title}</strong><br>
@@ -636,10 +638,11 @@ body {
     if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
     if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    const currentTurn = getTurnForDate(task, selectedDate);
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     const completedCount = completedUsers.length;
-    const nextUser = getNextUser(task, selectedDate);
+
+    const currentTurn = userOrder[completedCount % userOrder.length];
+    const nextUser = userOrder[(completedCount + 1) % userOrder.length];
 
     let taskDetails = "";
     if (task.title) taskDetails += `<strong>Title:</strong> ${task.title}<br>`;
@@ -707,55 +710,11 @@ body {
 
 
 
-function getNextUser(task, selectedDate) {
-    const userOrder = [...task.users];
-    const currentTurn = getTurnForDate(task, selectedDate);
-    const currentIndex = userOrder.indexOf(currentTurn);
-    const nextIndex = (currentIndex + 1) % userOrder.length;
-    return userOrder[nextIndex];
-}
-
-
-
-
 
 
         // Calculate the current turn for a given date
-        function getTurnForDate(task, selectedDateStr) {
-    const todayStr = new Date().toISOString().split("T")[0];
-    const selectedDate = new Date(selectedDateStr);
-    const userOrder = [...task.users];
-    const completions = task.completions || {};
-    const turnByDate = task.turnByDate || {};
 
-    if (turnByDate[selectedDateStr]) {
-        return turnByDate[selectedDateStr];
-    }
 
-    let currentIndex = userOrder.indexOf(task.turn || userOrder[0]);
-    if (currentIndex === -1) currentIndex = 0;
-
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-
-    const startDate = new Date(task.date.split(" to ")[0]);
-    const d = new Date(startDate);
-
-    while (d <= selectedDate) {
-        const dStr = d.toISOString().split("T")[0];
-        if (turnByDate[dStr]) {
-            currentIndex = userOrder.indexOf(turnByDate[dStr]);
-        } else {
-            const completedUsers = Array.isArray(completions[dStr]) ? completions[dStr] : [];
-            const advanceCount = Math.min(completedUsers.length, repeatLimit);
-            currentIndex = (currentIndex + advanceCount) % userOrder.length;
-        }
-        d.setDate(d.getDate() + 1);
-    }
-
-    return userOrder[currentIndex];
-}
 
 
 
