--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -674,8 +674,7 @@ function determineTurnForDate(task, targetDateStr) {
 
         if (dateStr === targetDateStr) break;
 
-        // ✅ Always advance turn after any completions
-        if (dayCompletions.length > 0) {
+        if (dayCompletions.length >= repeatLimit) {
             const lastUser = dayCompletions[dayCompletions.length - 1];
             const lastIndex = users.indexOf(lastUser);
             currentTurn = users[(lastIndex + 1) % users.length];
@@ -684,7 +683,6 @@ function determineTurnForDate(task, targetDateStr) {
 
     return currentTurn;
 }
-
 
 
 
