--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -646,6 +646,7 @@ function determineTurnForDate(task, targetDateStr) {
 
     const users = [...task.users];
     const completions = task.completions || {};
+
     const repeatLimit = task.repeat === "Daily" ? (task.timesPerDay || 1)
                       : task.repeat === "Weekly" ? (task.timesPerWeek || 1)
                       : task.repeat === "Monthly" ? (task.timesPerMonth || 1)
@@ -662,7 +663,7 @@ function determineTurnForDate(task, targetDateStr) {
     const startDate = parseDate(task.date.split(" to ")[0]);
     const endDate = parseDate(targetDateStr);
 
-    let currentTurn = users[0];
+    let turnIndex = 0;
 
     for (
         let d = new Date(startDate);
@@ -672,18 +673,14 @@ function determineTurnForDate(task, targetDateStr) {
         const dateStr = formatDate(d);
         const dayCompletions = completions[dateStr] || [];
 
-        if (dateStr === targetDateStr) break;
-
-        if (dayCompletions.length >= repeatLimit) {
-            const lastUser = dayCompletions[dayCompletions.length - 1];
-            const lastIndex = users.indexOf(lastUser);
-            currentTurn = users[(lastIndex + 1) % users.length];
+        // 🔁 For each completion on that day, advance turn
+        for (let i = 0; i < dayCompletions.length; i++) {
+            turnIndex = (turnIndex + 1) % users.length;
         }
     }
 
-    return currentTurn;
+    return users[turnIndex];
 }
-
 
 
 
@@ -789,6 +786,7 @@ async function showTaskDetails(task) {
 
 
 // Handle task completion and turn advancement
+
 async function finishTask(userName, task, button, selectedDate) {
     const adminEmail = localStorage.getItem("currentAdminEmail");
     const todayStr = selectedDate || new Date().toISOString().split("T")[0];
@@ -808,12 +806,14 @@ async function finishTask(userName, task, button, selectedDate) {
         const result = await res.json();
         if (!res.ok) throw new Error(result.error || "Failed to complete task");
 
-        const rewardAmount = result.updatedTask.reward || 0;
+        const updatedTask = result.updatedTask;
+        const rewardAmount = updatedTask.reward || 0;
 
-        // Update task's currentTurn after completion
-        task.currentTurn = determineTurnForDate(result.updatedTask, todayStr);
+        // ✅ Recalculate currentTurn after completion
+        const newTurn = determineTurnForDate(updatedTask, todayStr);
+        updatedTask.currentTurn = newTurn;
 
-        // Trigger UI updates
+        // ✅ Trigger UI updates with new turn
         if (typeof triggerHoneyRain === 'function') triggerHoneyRain(rewardAmount);
         if (typeof loadTasksForDate === 'function') loadTasksForDate(todayStr);
         if (typeof loadUserTasks === 'function') loadUserTasks(userName, todayStr);
@@ -823,8 +823,6 @@ async function finishTask(userName, task, button, selectedDate) {
         alert("Failed to finish task. Please try again.");
     }
 }
-
-
 
 
 
